spacing fixes and background image url

--- a/css/scss/global.scss
+++ b/css/scss/global.scss
@@ -24,6 +24,7 @@ section {
 
   ul {
     width: 60%;
+    margin: 0 auto;
   }
 }
 
