--- a/css/scss/sect_one.scss
+++ b/css/scss/sect_one.scss
@@ -1,7 +1,7 @@
 // Section One
 #section-one {
   //background: $primary;
-  background: linear-gradient(rgba(33,206,153,1),rgba(33,206,153,.85)), url('../img/computer-min.jpg');// no-repeat center center fixed;
+  background: linear-gradient(rgba(33,206,153,1),rgba(33,206,153,.85)), url('../../img/computer-min.jpg');// no-repeat center center fixed;
   background-position: center center;
   background-size: cover;
 
