--- a/css/scss/sect_two.scss
+++ b/css/scss/sect_two.scss
@@ -8,7 +8,7 @@
     width: 500px;
     border: white solid;
     border-width: 3rem .5rem .5rem;
-    margin: 0 auto 2rem;
+    margin: 1rem auto 2rem;
     border-radius: 3px;
     padding-top: 1rem;
   }
